Bug fix, UI improvement.

--- a/src/assets/panel/style.css
+++ b/src/assets/panel/style.css
@@ -147,6 +147,7 @@ textarea {
     font-family: inherit;
     overflow-y: hidden;
     color: var(--color);
+    max-height: calc(5lh + 10px);
 }
 
 input[type="text"]:focus,
