Added release note.

--- a/src/assets/panel/style.css
+++ b/src/assets/panel/style.css
@@ -145,7 +145,7 @@ select {
 
 textarea {
     font-family: inherit;
-    overflow-y: hidden;
+    resize: none;
     color: var(--color);
     max-height: calc(5lh + 10px);
 }
