Added import/export settings to panel.

--- a/src/assets/panel/style.css
+++ b/src/assets/panel/style.css
@@ -278,7 +278,7 @@ button.apply-settings {
     margin: 0;
 }
 
-button.reset-settings {
+button.panel-settings {
     flex: unset;
     border: none;
     cursor: pointer;
